--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -33,18 +33,18 @@ body
 
 
 #howto-container
-  position: absolute
-  z-index: 1
-  width: 30%
-  margin-left: 60%
+  align-self: flex-start
 
 #howto 
-  width: 100%
-  padding: 10px
-  height: 40vh
+  width: 400px
+  height: 400px
   background-color: rgba(0,0,0,.8)
   color: white
   font-size: 1rem
+  margin-left: 10px
+
+  div
+    padding: 70px 30px
 
 #input-div
   width: 100%
@@ -84,6 +84,7 @@ body
         align-items: flex-end
         justify-content: center
         color: white
+        overflow-wrap: break-word
 
 #chartbox
   width: 100%
@@ -112,9 +113,11 @@ body
   display: flex
   width: 95%
   padding: 0 5px
+  flex-direction: row-reverse
   justify-content: space-between
   background-color: #f6fff6
   box-shadow: 1px 1px 3px rgba(0,0,0,.3)
+  overflow: scroll
 
   #score
     font-size: 1.5rem
@@ -124,7 +127,7 @@ body
   #name
     font-size: 1rem
     margin: 3px
-    align-item: flex-end
+    align-items: flex-end
 
 
 #box0 
