add font styling to login and nav

--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -7,6 +7,8 @@ body
 
   #title
     font-size: 70px
+    font-family: 'Monofett', cursive;
+    color: tomato
 
 #namebox
   border: 1px solid black
@@ -21,6 +23,9 @@ body
   justify-content: space-between
 
   .nav-title
+    margin: 10px 5px
+    font-size: 2rem
+    font-family: 'Monofett', cursive;
 
   .new-game-btn, .howto-btn
     width: 150px
