--- a/public/main.css
+++ b/public/main.css
@@ -5,7 +5,9 @@ body {
 .login {
   margin-top: 200px; }
   .login #title {
-    font-size: 70px; }
+    font-size: 70px;
+    font-family: 'Monofett', cursive;
+    color: tomato; }
 
 #namebox {
   border: 1px solid black;
@@ -18,6 +20,10 @@ body {
 #nav {
   display: flex;
   justify-content: space-between; }
+  #nav .nav-title {
+    margin: 10px 5px;
+    font-size: 2rem;
+    font-family: 'Monofett', cursive; }
   #nav .new-game-btn, #nav .howto-btn {
     width: 150px;
     height: 50px;
