--- a/public/main.css
+++ b/public/main.css
@@ -130,3 +130,9 @@ body {
 
 #box3 {
   background-color: teal; }
+
+#box4 {
+  background-color: hotpink; }
+
+#box5 {
+  background-color: lightblue; }
