add winner display div

--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -152,3 +152,29 @@ body
 
 #box5 
   background-color: lightblue
+
+#winnerbox
+  position: absolute
+  display: flex
+  justify-content: center
+  align-items: center
+  background-color: rgba(0,0,0,.8)
+  width: 100%
+  height: 70vh
+
+  #winner
+    width: 50%
+    padding: 10% 0
+    text-align: center
+    background-color: black
+    color: white
+    font-size: 2rem
+
+    button
+      width: 150px
+      height: 50px
+      margin: 0 2px
+      border: none
+      background-color: white
+      color: #333
+      font-size: 14px
